typescript/checker/tests/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration6.ts.stderr
error: Expected RBracket, got Some(Colon)
 --> $DIR/tests/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration6.ts:2:13
  |
2 |    static [x: string]: string;
  |             ^

